--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth:
   cloud_firestore:
   firebase_storage:
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
